--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ZabbixApp</string>
+    <string name="internet_status_message">Проверьте подключение к интернету и перезапустите приложение</string>
+    <string name="filename">Settings.json</string>
 </resources>
